Add support for 2nd-generation Intuos Pro

This tablet is usable without this patch, but the device type is missing
the WCM_RING flag. This prevents the ring valuator from being initialized
correctly, and in turn causes recent versions of gnome-control-center to
not allow configuration of the ring.

https://bugzilla.gnome.org/show_bug.cgi?id=785358

Signed-off-by: Jason Gerecke <jason.gerecke@wacom.com>
Reviewed-by: Ping Cheng <ping.cheng@wacom.com>